deployment/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /v1/api/users
            pathType: Prefix
            backend:
              service:
                name: application-auth-balancer
                port:
                  number: 8080
          - path: /v1/api/content
            pathType: Prefix
            backend:
              service:
                name: application-content-balancer
                port:
                  number: 8080
          - path: /v1/api/metadata
            pathType: Prefix
            backend:
              service:
                name: application-metadata-balancer
                port:
                  number: 8080
          - path: /v1/api/background
            pathType: Prefix
            backend:
              service:
                name: application-background-balancer
                port:
                  number: 8080
